@@ -71,13 +71,6 @@ public class SelectStatement implements CQLStatement
 
     private static final int DEFAULT_COUNT_PAGE_SIZE = 10000;
 
-    /**
-     * In the current version a query containing duplicate values in an IN restriction on the partition key will
-     * cause the same record to be returned multiple time. This behavior will be changed in 3.0 but until then
-     * we will log a warning the first time this problem occurs.
-     */
-    private static volatile boolean HAS_LOGGED_WARNING_FOR_IN_RESTRICTION_WITH_DUPLICATES;
-
     private final int boundTerms;
     public final CFMetaData cfm;
     public final Parameters parameters;
@@ -682,9 +675,9 @@ public class SelectStatement implements CQLStatement
              : limit;
     }
 
-    private Collection<ByteBuffer> getKeys(final QueryOptions options) throws InvalidRequestException
+    private NavigableSet<ByteBuffer> getKeys(final QueryOptions options) throws InvalidRequestException
     {
-        List<ByteBuffer> keys = new ArrayList<ByteBuffer>();
+        TreeSet<ByteBuffer> sortedKeys = new TreeSet<>(cfm.getKeyValidator());
         CBuilder builder = cfm.getKeyValidatorAsCType().builder();
         for (ColumnDefinition def : cfm.partitionKeyColumns())
         {
@@ -695,18 +688,14 @@ public class SelectStatement implements CQLStatement
 
             if (builder.remainingCount() == 1)
             {
-                if (values.size() > 1 && !HAS_LOGGED_WARNING_FOR_IN_RESTRICTION_WITH_DUPLICATES  && containsDuplicates(values))
-                {
-                    // This approach does not fully prevent race conditions but it is not a big deal.
-                    HAS_LOGGED_WARNING_FOR_IN_RESTRICTION_WITH_DUPLICATES = true;
-                    logger.warn("SELECT queries with IN restrictions on the partition key containing duplicate values will return duplicate rows.");
-                }
-
                 for (ByteBuffer val : values)
                 {
                     if (val == null)
                         throw new InvalidRequestException(String.format("Invalid null value for partition key part %s", def.name));
-                    keys.add(builder.buildWith(val).toByteBuffer());
+
+                    ByteBuffer keyBuffer = builder.buildWith(val).toByteBuffer();
+                    validateKey(keyBuffer);
+                    sortedKeys.add(keyBuffer);
                 }
             }
             else
@@ -720,18 +709,22 @@ public class SelectStatement implements CQLStatement
                 builder.add(val);
             }
         }
-        return keys;
+        return sortedKeys;
     }
 
-    /**
-     * Checks if the specified list contains duplicate values.
-     *
-     * @param values the values to check
-     * @return <code>true</code> if the specified list contains duplicate values, <code>false</code> otherwise.
-     */
-    private static boolean containsDuplicates(List<ByteBuffer> values)
+    private void validateKey(ByteBuffer keyBuffer) throws InvalidRequestException
     {
-        return new HashSet<>(values).size() < values.size();
+        if (keyBuffer == null || keyBuffer.remaining() == 0)
+            throw new InvalidRequestException("Key may not be empty");
+
+        try
+        {
+            cfm.getKeyValidator().validate(keyBuffer);
+        }
+        catch (MarshalException exc)
+        {
+            throw new InvalidRequestException("Partition key IN clause contained invalid value: " + exc);
+        }
     }
 
     private ByteBuffer getKeyBound(Bound b, QueryOptions options) throws InvalidRequestException
